# rosdata

Documents/khepera1/controllers/tcpip/: .client.c.swp  a.out  client.c
Documents/khepera1/controllers/tcpip/install/: local_setup.sh  setup.sh
Documents/khepera1/controllers/tcpip/log/: latest_build
Documents/khepera1/protos/: .Khepera1.cache
Documents/khepera1/worlds/: .khepera_tcpip.wbproj
Documents/my_first_simulation/protos/: .Gazebo1.cache  .KukaLbrIiwa14R820.cache  .LBR3R760iisy.cache  Gazebo1.proto  LBR3R760iisy.proto
Documents/my_first_simulation/worlds/: .my_first_simulation.wbproj  my_first_simulation.wbt
Documents/ros2_project/protos/: .LBRiiwa14.cache  LBRiiwa14.proto
Documents/ros2_project/worlds/: .ros2_projectwbt.wbproj
action_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
action_ws/install/action_tutorials_cpp/lib/action_tutorials_cpp/: fibonacci_action_client  fibonacci_action_server
action_ws/install/action_tutorials_cpp/share/action_tutorials_cpp/: local_setup.sh  package.sh
action_ws/install/action_tutorials_interfaces/share/action_tutorials_interfaces/: local_setup.sh  package.sh  package.xml
action_ws/kuka_lbr_iiwa_support/meshes/lbr_iiwa_14_r820/visual/: base_link.dae
action_ws/kuka_lbr_iiwa_support/urdf/: model.urdf
action_ws/log/: latest_build
action_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/kuka_eki_hw_interface/: kuka_eki_hw_interface_node
catkin_ws/devel/lib/kuka_rsi_hw_interface/: kuka_hardware_interface_node
catkin_ws/devel/lib/pkgconfig/: LBR3R760iisy.pc  beginner_tutorials.pc  foobar.pc  kuka_eki_hw_interface.pc  kuka_kr10_support.pc  kuka_kr120_support.pc  kuka_kr150_support.pc  kuka_kr16_support.pc  kuka_kr210_support.pc  kuka_kr3_support.pc  kuka_kr5_support.pc  kuka_kr6_support.pc  kuka_lbr_iiwa_support.pc  kuka_resources.pc  kuka_rsi_hw_interface.pc  kuka_rsi_simulator.pc  urdf_tutorial.pc
catkin_ws/devel/share/LBR3R760iisy/cmake/: LBR3R760iisyConfig.cmake
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/foobar/cmake/: foobarConfig.cmake
catkin_ws/devel/share/kuka_eki_hw_interface/cmake/: kuka_eki_hw_interfaceConfig.cmake
catkin_ws/devel/share/kuka_kr10_support/cmake/: kuka_kr10_supportConfig.cmake
catkin_ws/devel/share/kuka_kr120_support/cmake/: kuka_kr120_supportConfig.cmake
catkin_ws/devel/share/kuka_kr150_support/cmake/: kuka_kr150_supportConfig.cmake
catkin_ws/devel/share/kuka_kr16_support/cmake/: kuka_kr16_supportConfig.cmake
catkin_ws/devel/share/kuka_kr210_support/cmake/: kuka_kr210_supportConfig.cmake
catkin_ws/devel/share/kuka_kr3_support/cmake/: kuka_kr3_supportConfig.cmake
catkin_ws/devel/share/kuka_kr5_support/cmake/: kuka_kr5_supportConfig.cmake
catkin_ws/devel/share/kuka_kr6_support/cmake/: kuka_kr6_supportConfig.cmake
catkin_ws/devel/share/kuka_lbr_iiwa_support/cmake/: kuka_lbr_iiwa_supportConfig.cmake
catkin_ws/devel/share/kuka_resources/cmake/: kuka_resourcesConfig.cmake
catkin_ws/devel/share/kuka_rsi_hw_interface/cmake/: kuka_rsi_hw_interfaceConfig.cmake
catkin_ws/devel/share/kuka_rsi_simulator/cmake/: kuka_rsi_simulatorConfig.cmake
catkin_ws/devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
catkin_ws/log/: latest_build
catkin_ws/src/LBR3R760iisy/: CMakeLists.txt  package.xml
catkin_ws/src/LBR3R760iisy/install/: local_setup.sh  setup.bash  setup.sh
catkin_ws/src/LBR3R760iisy/launch/: load_robot.launch
catkin_ws/src/LBR3R760iisy/meshes/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  robotBase.stl  robotbase_withcables.stl  simplify_link1.stl  simplify_link3.stl  simplify_link4.stl  simplify_link5.stl  simplify_link6.stl  simplify_robotBase.stl  simplify_robotbase_withcables.stl
catkin_ws/src/LBR3R760iisy/urdf/: Urdf.urdf
catkin_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws/src/log/: latest_build
dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
dev_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
dev_ws/install/cpp_srvcli/lib/cpp_srvcli/: client  server
dev_ws/install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh  package.xml
dev_ws/install/my_package/share/my_package/: local_setup.sh  package.sh
dev_ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
dev_ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
dev_ws/install/webots_ros2/share/webots_ros2/: package.sh
dev_ws/install/webots_ros2_control/share/webots_ros2_control/: local_setup.sh  package.sh
dev_ws/install/webots_ros2_core/share/webots_ros2_core/: package.sh
dev_ws/install/webots_ros2_driver/share/webots_ros2_driver/: package.sh
dev_ws/install/webots_ros2_epuck/share/webots_ros2_epuck/: package.sh
dev_ws/install/webots_ros2_importer/share/webots_ros2_importer/: package.sh
dev_ws/install/webots_ros2_mavic/share/webots_ros2_mavic/: package.sh
dev_ws/install/webots_ros2_msgs/share/webots_ros2_msgs/: package.sh
dev_ws/install/webots_ros2_tesla/share/webots_ros2_tesla/: package.sh
dev_ws/log/: latest_build
dev_ws/src/LBR3R760iisy/: package.xml
dev_ws/src/LBR3R760iisy/install/: setup.ps1  setup.zsh
dev_ws/src/LBR3R760iisy/log/: latest_build
dev_ws/src/LBR3R760iisy/rviz/: rviz.rviz
dev_ws/src/LBR3R760iisy/urdf/: Urdf.urdf
dev_ws/src/cpp_pubsub/: CMakeLists.txt
dev_ws/src/my_package/install/: local_setup.sh  setup.sh
dev_ws/src/my_package/log/: latest_build
simplify10/: simplify_link1.stl  simplify_link2.stl  simplify_link3.stl  simplify_link5.stl  simplify_link6.stl  simplify_robotBase.stl  simplify_robotbase_withcables.stl
urdfs/: LBRiiwa14.proto  kuka_lbr_iiwa-verification.urdf
(+11 files in other folders)
